[package]
name = "swarm"
version = "0.1.0"
edition = "2024"
description = "Distributed work scheduler on the CE compute mesh — fan work out across hosts, gather results."
license = "AGPL-3.0-only"
repository = "https://github.com/ce-net/swarm"

[dependencies]
ce-rs = { git = "https://github.com/ce-net/ce-rs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
